# qcs6490_yolox

./: CMakeLists.txt  README.md  test.cpp
include/: yolox.hpp
src/: yolox.cpp
